@startuml

title __CALCULATOR's Class Diagram__\n

  package sase.multi {
    package sase.multi.calculator {
      class ExhaustiveMPTCalculator {
          - algoUnit : IAlgoUnit
          + ExhaustiveMPTCalculator()
          + calculateMultiPlan()
          - recursiveCalculateBestTree()
          + getAlgoUnit()
          + improveMultiPlan()
      }
    }
  }
  

  package sase.multi {
    package sase.multi.calculator {
      class SubSetIterator {
          - eventList : List<EventType>
          - counter : int
          + SubSetIterator()
          + getNextSubSet()
      }
    }
  }
  

  package sase.multi {
    package sase.multi.calculator {
      interface IMPTCalculator {
          {abstract} + calculateMultiPlan()
          {abstract} + improveMultiPlan()
          {abstract} + getAlgoUnit()
      }
    }
  }
  

  package sase.multi {
    package sase.multi.calculator {
      class MPTCalculatorFactory {
          {static} + createMPTCalculator()
      }
    }
  }
  

  package sase.multi {
    package sase.multi.calculator {
      enum MPTCalculatorTypes {
        NO_SHARING
        NO_REORDERING
        EXHAUSTIVE
        ITERATIVE_IMPROVEMENT
        SIMULATED_ANNEALING
        TABU_SEARCH
      }
    }
  }
  

  package sase.multi {
    package sase.multi.calculator {
      class NoReorderingMPTCalculator {
          - algoUnit : IAlgoUnit
          + NoReorderingMPTCalculator()
          + calculateMultiPlan()
          + getAlgoUnit()
          + improveMultiPlan()
      }
    }
  }
  

  package sase.multi {
    package sase.multi.calculator {
      class NoSharingMPTCalculator {
          - algoUnit : IAlgoUnit
          + NoSharingMPTCalculator()
          + calculateMultiPlan()
          + getAlgoUnit()
          + improveMultiPlan()
      }
    }
  }
  

  ExhaustiveMPTCalculator -up-|> IMPTCalculator
  ExhaustiveMPTCalculator +-down- SubSetIterator
  NoReorderingMPTCalculator -up-|> IMPTCalculator
  NoSharingMPTCalculator -up-|> IMPTCalculator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
